<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Main!</string>
	<string name="app_name">SimpleImageViewer</string>
	<string name="textview_how_to_use">This app is intended to be called by an explorer.\nThere are some functions to open images.</string>
	<string name="error_image_load_failed">Failed to load image</string>
	<string name="pref_category_max_imagesize">Image Quality</string>
	<string name="pref_key_max_imagesize">max_imagesize</string>
	<string name="pref_title_max_imagesize">Image Quality</string>
	<string name="pref_summary_max_imagesize">Decrease when your device runs out of resources.</string>
	<string name="pref_key_custom_max_imagesize">custom_max_imagesize</string>
	<string name="pref_title_custom_max_imagesize">Custom Image Quality</string>
	<string name="pref_summary_custom_max_imagesize">Input custom max image size (width x height) in px. Images exceeding this limit will be automatically minified.</string>
	<string name="pref_default_custom_max_imagesize">2000000</string>
	<string name="pref_category_screen_orientation">Screen Orientation</string>
	<string name="pref_key_screen_orientation">screen_orientation</string>
	<string name="pref_title_screen_orientation">Screen Orientation</string>
	<string name="pref_summary_screen_orientation">Set screen orientation of image view.</string>
	<string name="menu_title_set_preferences">Settings</string>
	<string name="menu_title_change_orientation">Rotate Screen</string>
	<string name="menu_title_show_property">Properties</string>
	<string name="menu_title_open_with">Open with</string>
	<string name="file_property">File properties:\nFilename: %1$s\nSize: %2$dKB\nResolution: %3$s\nPath: %4$s\n\nViewer status:\nDisplaying resolution: %5$s\n%6$d of %7$d</string>
	<string name="image_resolution">%1$d x %2$dpx</string>
	<string name="toast_first_file">First File</string>
	<string name="toast_last_file">Last File</string>
	<string name="button_ok">OK</string>
	<string name="button_select_file">Open file from explorer...</string>
	<string name="button_input_file">Open file input above</string>
	<string name="edittext_hint_file_path">Input full file path here</string>
	<string name="error_file_path_empty">File path is empty</string>
	<string name="error_invalid_file_path">File path is invalid</string>
	<string name="error_no_explorer_found">No explorer app found. Please get one with Market app.</string>
	<string name="error_no_file_in_directory">No file exists in the directory.\nPath: %1$s</string>
	<string name="button_go_settings">Settings...</string>
	<string name="chooser_explorer">Open image from</string>
</resources>
