<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_change_orientation"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/menu_title_change_orientation"></item>

    <item
        android:id="@+id/menu_show_property"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_title_show_property"></item>
    <item
        android:id="@+id/menu_open_with"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_title_open_with"></item>

    <item
        android:id="@+id/menu_set_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_title_set_preferences"></item>

</menu>